--- a/pet-clinic/package.json
+++ b/pet-clinic/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.2.0",
+    "@angular/cdk": "^13.3.4",
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
@@ -20,6 +21,7 @@
     "@angular/router": "~13.2.0",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
+    "moment": "^2.29.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
