--- a/pet-clinic/package.json
+++ b/pet-clinic/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~13.2.0",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
+    "keycloak-angular": "^9.1.0",
+    "keycloak-js": "^16.1.1",
     "moment": "^2.29.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
