--- a/pet-clinic/angular.json
+++ b/pet-clinic/angular.json
@@ -17,6 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [ "keycloak-js" ],
             "outputPath": "dist/pet-clinic",
             "index": "src/index.html",
             "main": "src/main.ts",
