--- a/pet-clinic/package.json
+++ b/pet-clinic/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --ssl=true --sslKey=./cert/localhost.key --sslCert=./cert/localhost.crt",
+    "start": "ng serve --ssl=true --sslKey=./certs/localhost.key --sslCert=./certs/localhost.crt",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
