--- a/pet-clinic/package.json
+++ b/pet-clinic/package.json
@@ -16,9 +16,11 @@
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
+    "@angular/localize": "^13.3.8",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.1",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
     "keycloak-angular": "^9.1.0",
