--- a/pet-clinic/Dockerfile
+++ b/pet-clinic/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:latest as build
 WORKDIR /usr/src/app
 COPY package.json package-lock.json ./
-RUN npm install
+RUN npm install --legacy-peer-deps
 COPY . .
 RUN npm run build
 
